changed photos formats

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<button class="nav_btn cockt">Cocktail</button>
 	</nav>
 	<div class="menu clean_menu">
-		<img src="assets/CleanMenu.png">
+		<img src="assets/CleanMenu.jpg">
 	</div>
 	<div class="menu cockt_menu">
-		<img src="assets/Cocktails.png">
+		<img src="assets/Cocktails.jpg">
 	</div>
 </body>
 </html>
